Split volume and seek in swagger API
